<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout_platform"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_door_sign_decor">

    <TextView
        android:id="@+id/tv_platform_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_platform"
        android:textColor="@color/text_primary"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toTopOf="@id/btn_select_feishu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_select_feishu"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:text="@string/platform_feishu"
        android:textColor="@color/text_primary"
        android:textSize="24sp"
        android:textStyle="bold"
        android:background="@drawable/bg_button_config"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_select_outlook"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <Button
        android:id="@+id/btn_select_outlook"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:text="@string/platform_outlook"
        android:textColor="@color/text_primary"
        android:textSize="24sp"
        android:textStyle="bold"
        android:background="@drawable/bg_button_config"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_select_feishu"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
